<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#E4E4E4"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/match_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:layout_gravity="center"
                    android:src="@drawable/placeholder_match_img_foreground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/layout_shadow">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/name_placeholder"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:fontFamily="@font/poppins"/>
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="200dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/dislike_match"
                android:layout_weight="1"
                android:id="@+id/dislike_match"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="200dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/like_match"
                android:id="@+id/like_match"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>