<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/langsync_logo"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_person_24"
...
