...
        android:text="@string/logo_text"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/login_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
...
